Fix array initialization exception